Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113573

When dragging a header section it will no longer scroll when at the edge

    XMLWordPrintable

Details

    • All
    • 787b4c150 (dev), df52cddf7 (6.5), a84d0b6ba (6.6), 64a283a98 (dev), 36f01b7f5 (6.7), 4883d2f59 (6.6), 382e5bcb2 (tqtc/lts-6.5)

    Description

      When dragging a header section it will no longer scroll when at the edge. Since the mouse is occupied then it should be scrolling to the right when the section is near the edge.

      In the example attached, press and hold on section 2 to start the drag and move to the right, note that it does not scroll when near the edge.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-113573
          # Subject Branch Project Status CR V

          Activity

            People

              axelspoerl Axel Spoerl
              andysh Andy Shaw
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: